--- a/style.css
+++ b/style.css
@@ -54,6 +54,20 @@ input[type="number"] {
     border: 2px solid #7f8c8d;
 }
 
+/* Controles de Aposta por Coluna */
+.bet-columns {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 10px;
+}
+
+.bet-column {
+    padding: 10px;
+    font-size: 16px;
+    width: 80px;
+    text-align: center;
+}
+
 /* Slots */
 .slot-machine {
     display: flex;
